src/Components.css
.dark-banner {
        background: var(--dark-bg);
        color: white;
        font-weight: bold;
        display: flex;
        justify-content: space-around;
}

#header {
        align-items: center;
}

#brand {
        padding: 10px 6px;
}

#menu {
        display: flex;
        flex-wrap: nowrap;
        gap: 35px;
}

#search {
        display: flex;
        gap: 10px;
}

#search {
        padding: 10px 6px;
        color: var(--dark-bg);
}

.Button {
        font-size: 0.9em;
        border: solid white 3px;
        background-color: transparent;
        font-weight: bold;
        text-transform: uppercase;
}

.white-btn {
        color: white;
}

.orange-btn {
        color: var(--orange);
        border: solid var(--orange) 3px;
}

.little-btn {
        padding: 8px;
}

.big-btn {
        padding: 15px;
}

.round-btn {
        border-radius: 5px;
}


input {
        padding: 12px;
        border-radius: 5px;
        border: none;
        font-size: 0.9em;
}

#breadcrumb {
        background-image: url('/img/main.jpg');
        background-origin: border-box;
        background-position: 0% 75%;
        background-repeat: no-repeat;
        background-size: 100%;
        height: 30vh;
        width: 100%;
        font-weight: bold;
        color: white;
        padding: 5% 8%;
}

.bc-title{
        font-weight: bold;
        font-size: 3em;
        text-transform: uppercase;
        width: 50%;
}

.bc-btn {

}

.section {
        padding: 25px;
}

.CardList {
        display: block;
}

.CardList_list {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        column-gap: 15px;
        row-gap: 25px;
}

.SectionTitle {
        font-weight: bold;
        font-size: 2em;
        text-transform: uppercase;
        text-align: center;
        color: var(--dark-bg);
        padding-bottom: 25px;
}


.Card {
        width: 25%;
        box-shadow: 7px 10px rgba(0, 0, 0, 0.1);
}

.Card img {
        width: 100%;
        object-fit: cover;
}

.Card_footer {
        display: flex;
        justify-content: space-around;
        padding: 12px;
}

.Card_title {
}

.Card_like {
        display: block;
}


.Card_like svg {
        width: 30px;
        height: auto;
}

.Card_like svg {
        fill: transparent;
}

.Card_like.liked svg {
        fill: var(--orange);
}

.Card_like svg path {
        stroke: var(--orange);
}


.Newsletter {
}

.Newsletter_services {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        column-gap: 50px;
        row-gap: 20px;
}

.NewsletterItem {
        width: 30%;
        display: flex;
        flex-direction: column;
        gap: 10px;
        align-items: center;
        font-size: 1.4em;
        padding-top: 1%;
        padding-bottom: 1%;
}

.NewsletterItem_title {
        font-weight: bold;
        font-size: 1.2em;
        text-transform: uppercase;
}

.NewsletterItem div {
        text-align: center;
}

.btn-group {
        display: flex;
        gap: 3%;
        justify-content: center;
}

.Footer {
        display: grid;
        grid-template-columns: 1fr 2fr 3fr;
        grid-template-rows: 1;
        padding: 20px 5%;
        background-color: var(--dark-bg);
        color: white;
}

.FooterItem {
        display: block;
        padding: 10px 15px;
}

.FooterItem_child{
}

.FooterItem_child__wrap {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(2, 1fr);
        row-gap: 10px;
        column-gap: 10px;
}
.FooterItem_child__column {
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: 1fr;
        row-gap: 10px;
        column-gap: 10px;
}
.FooterItem_child__not-grid{
        display: block;
}
.FooterItem_child__not-grid > * {
        margin: 5% 0;
}

.FooterItem_title {
        font-weight: bold;
        font-size: 1.2em;
        text-transform: uppercase;
        padding-bottom: 20px;
}

.FooterBox {
        color: white;
        display: block;
}

.FooterBox_title {
        font-weight: bold;
        text-transform: uppercase;
}

.FooterBox a {
        color: var(--mute);
        display: block;
        text-decoration: none;
}

.FooterBox a:hover {
        color: inherit;
        text-decoration: none;

}

/* MOBILE */
@media (max-width: 768px) {
        #breadcrumb {
                
        }
        .bc-title {
                font-size: 2em;
        }

        .SectionTitle {
                font-size: 1.5em;
                padding-bottom: 15px;
        }

        .Card {
                width: 35%;
        }

        .Button {
                font-size: 0.7em;
        }

        .little-btn {
                padding: 5px;
        }

        .big-btn {
                padding: 12px;
        }

        .Newsletter_services {
                font-size: 0.6em;
                margin-top: 40px;
                margin-bottom: 60px;
        }

        .Footer {
                display: flex;
                flex-wrap: wrap;
                row-gap: 5px;
                column-gap: 5px;
                justify-content: center;
                vertical-align: center
        }

}

